# CPPPlayground

./: .gitignore  CMakeLists.txt  docker-compose.yml  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/impl/: minio.cpp  utils.cpp
src/core/include/: minio.h  utils.h
